--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 	
     <div class="m-5" style="text-align: center;margin-right: 48px;margin-bottom: 48px;">
-        <div class="text-center m-3" style="margin-bottom: 22px;"><a class="btn btn-primary btn-lg border rounded-0 ripple-effect" role="button" data-bss-hover-animate="pulse" style="width: 275px;padding-top: 11px;padding-right: 23px;background: var(--bs-danger);margin: -1px;margin-right: 0px;margin-bottom: 6px;margin-top: 85px;margin-left: -21px;height: 55px;" href="https://yashbhangale9.github.io/physics-books/">PHYSICS</a></div>
+        <div class="text-center m-3" style="margin-bottom: 22px;"><a class="btn btn-primary btn-lg border rounded-0 ripple-effect" role="button" data-bss-hover-animate="pulse" style="width: 275px;padding-top: 11px;padding-right: 23px;background: var(--bs-danger);margin: -1px;margin-right: 0px;margin-bottom: 6px;margin-top: 85px;margin-left: -21px;height: 55px;" href="https://yashbhangale9.github.io/physics-notes/">PHYSICS</a></div>
         <div class="text-center m-3"><a class="btn btn-success btn-lg border rounded-0 ripple-effect" role="button" data-bss-hover-animate="pulse" style="width: 274px;margin-left: -21px;height: 55px;margin-top: 9px;">CHEMISTRY</a></div>
         <div class="text-center m-3"><a class="btn btn-warning btn-lg border rounded-0 ripple-effect" role="button" data-bss-hover-animate="pulse" style="width: 274px;margin-left: -21px;height: 54px;margin-top: 14px;" href="https://yashbhangale9.github.io/maths-notes/">MATHEMATICS</a></div>
         <div class="text-center m-3"></div>
